--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                     />
                 </picture>
             </div>
+            <div class="grid-background">
             <div class="grid-layout">
                 <div class="grid-container grid-h2">
                     <h2>Check out our most popular courses!</h2>
@@ -121,10 +122,13 @@
                     <button class="get-started">Get Started</button>
                 </div>
             </div>
+        </div>
 
             <footer>
+                <div id="footer-content">
                 <img src="resources/images/logo-light.svg" alt="logo skilled" />
                 <button class="footer-button">Get Started</button>
+            </div>
             </footer>
         </main>
     </body>
